# Prospeccao_B2B

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  fainder.sh  sdr.sh  setup_projeto.sh
.claude/: CLAUDE.md  PROMPT_MESTRE.md  ROADMAP.md  SOUL.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: leads.py  prospects.py
backend/app/core/: celery_app.py  config.py  database.py  llm.py
backend/app/models/: __init__.py  campaign.py  lead.py
backend/app/schemas/: lead.py
backend/app/services/: apollo.py  pdl.py
backend/app/tasks/: __init__.py  scraping.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/prospects/: page.tsx
frontend/src/components/: LeadsList.tsx  Nav.tsx  ProspectFilters.tsx  ProspectResults.tsx
frontend/src/lib/: api.ts
frontend/src/types/: lead.ts
